# policy-package-template

./: README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
src/yourvo_rucio_policy_package/: __init__.py  lfn2pfn.py  non_deterministic_pfn.py  permission.py  pfn2lfn.py  schema.py  scope.py  tape_metadata.py
